--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,3 +1,91 @@
-.modal {
-    font-size: 2rem;
+.react_modal__overlay {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
 }
+
+.react_modal__container {
+    display: flex;
+    width: 100vw;
+    height: 100dvh;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    z-index: 1000;
+    -webkit-box-pack: center;
+    justify-content: center;
+    align-items: flex-start;
+    overflow: auto;
+    overscroll-behavior-y: none;
+}
+
+.react_modal__content {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 100%;
+    outline: transparent solid 2px;
+    outline-offset: 2px;
+    border-radius: 6px;
+    color: inherit;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+    z-index: 1000;
+    background: #ffffff;
+    /* box-shadow: var(--modal-shadow); */
+    max-width: 500px;
+}
+
+.react_modal__header {
+    flex: 0 1 0%;
+    padding: 1rem 1.5rem;
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+
+.react_modal__cls-btn {
+    outline: transparent solid 2px;
+    outline-offset: 2px;
+    border-color: transparent;
+    cursor: pointer;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    flex-shrink: 0;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 6px;
+    transition: all 200ms;
+    background: transparent;
+    font-size: 1.25rem;
+    position: absolute;
+    top: 0.5rem;
+    right: 0.75rem;
+}
+
+.react_modal__body {
+    padding-inline-start: 1.5rem;
+    padding-inline-end: 1.5rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    flex: 1 1 0%;
+}
+
+.react_modal__footer {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: end;
+    justify-content: flex-end;
+    padding-inline-start: 1.5rem;
+    padding-inline-end: 1.5rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
